--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -31,6 +31,8 @@
     "react-redux": "^8.1.3",
     "redux-persist": "^6.0.0",
     "smart-webcomponents-react": "^18.0.11",
+    "sweetalert": "^2.1.2",
+    "sweetalert2": "^11.10.8",
     "typescript": "5.3.3"
   },
   "devDependencies": {
